# Vecstore-Back

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  INDEXES.md  flow.txt  insert.py  insert_image.py  insert_text.py  push.sh  search_image.py  server_architecture.html  test.py
.github/workflows/: deploy.yml
migrations/: 20250528093733_create-users.sql  20250603145922_databases.sql  20250605081634_api_keys.sql  20250616174407_subscriptions.sql  20250616174407_transactions.sql  20250627152333_usage.sql  20250628165009_email_code.sql
py_handler/: app.py  requirements.txt
src/: main.rs  prelude.rs  register_routes.rs
src/auth/: check_user.rs  insert_user.rs  mod.rs  token.rs
src/loaders/: aws_client.rs  init_db.rs  init_pinecone.rs  load_image.rs  load_model.rs  mod.rs
src/middleware/: api_middleware.rs  auth_middleware.rs  mod.rs
src/routes/: delete_document.rs  extract_features.rs  health.rs  insert_image.rs  insert_text.rs  mod.rs  nsfw_detector.rs  search.rs  search_image.rs  verify_google.rs
src/routes/auth/: code.html  login.rs  mod.rs  register.rs  register_google.rs  verify_email.rs
src/routes/dashboard/: add_db.rs  create_api_key.rs  delete_api_key.rs  delete_db_document.rs  get_api_keys.rs  get_dbs.rs  get_index_data.rs  list_transactions.rs  mod.rs  payment_methods.rs  portal_url.rs  search_document.rs  subscriptions.rs  upgrade_subscription.rs  upload_files.rs  usage.rs  user_credits.rs  user_plans.rs
src/routes/payments/: mod.rs  payment_created.rs  payment_failed.rs  payments_webhook.rs  subscription_canceled.rs  subscription_created.rs  subscription_updated.rs  transaction_completed.rs  transaction_failed.rs
src/structs/: api_struct.rs  app_state.rs  auth_struct.rs  dashboard_struct.rs  email_struct.rs  extract_features_struct.rs  google_struct.rs  insert_struct.rs  mod.rs  neon_struct.rs  nsfw_struct.rs  payment_struct.rs  pinecone_struct.rs  search_struct.rs  user_struct.rs
src/utils/: background_task.rs  check_user_limits.rs  extract_features.rs  feedback.html  feedback.rs  get_customer_id.rs  get_db_region.rs  get_user.rs  get_user_and_region.rs  hash_api_key.rs  increment_req.rs  init_db.rs  init_pinecone.rs  insert_vectors.rs  load_http_client.rs  load_model.rs  mod.rs  resize_image.rs  save_usage.rs  search_vectors.rs  test.rs  tokenizer.rs
tests/: bedrock.py  config.py  insert_image.py  insert_text.py  load_test.py  nsfw.py  search_by_image_test.py  search_image.py  search_stress_test.py  search_test.py  stress_test.py  test.py
