[package]
name = "vecstore-back"
version = "0.1.0"
edition = "2021"

[dependencies]
# WEBSERVER
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.4", features = ["multipart"] }
tower-http = { version = "0.5.0", features = ["cors"] }
http = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls",  "postgres", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
google-oauth = "1.11.3"
pwhash = "1"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.9.1"
hex = "0.4.3"
sha2 = "0.10.9"
futures = "0.3.31"
paddle-rust-sdk = "0.11.0"
jemallocator = "0.5"

# ML
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
anyhow = "1.0"
hf-hub = "0.3"
image = "0.25.6"
tokenizers = "0.15"
pinecone-sdk = "0.1.2"
