[package]
name = "vecstore-back"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
# panic = "abort"
strip = true

[dependencies]
# Web Framework & HTTP
axum = { version = "0.8.4", features = ["multipart"] }
http = "1.1.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Authentication & Security
google-oauth = "1.11.3"
jsonwebtoken = "9.3.0"
pwhash = "1"

# AWS Services
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.93.0"
aws-sdk-rekognition = "1.77.0"
aws-sdk-sesv2 = "1.65.0"

# Utilities
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
image = "0.25.6"
rand = "0.9.1"
sha2 = "0.10.9"
uuid = { version = "1.0", features = ["v4"] }
pdf-extract = "0.9.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

# Performance & Memory
jemallocator = "0.5"
mini-moka = "0.10.3"

# Payment Processing
paddle-rust-sdk = "0.11.0"
